--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 
-title: [WARCRAFT: Heroes Beyond Time]
-description: [A r oguelike game based on Warcraft 2]
+title: [WARCRAFT - Heroes Beyond Time]
+description: [A roguelike game based on Warcraft 2]
 show_downloads: ["true"]
