--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
@@ -459,6 +459,9 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="..\Game\config.xml" />
+    <Xml Include="..\Game\psystem_config.xml">
+      <Filter>Particle System</Filter>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Modules">
@@ -500,10 +503,5 @@
     <Filter Include="Particle System">
       <UniqueIdentifier>{9391c902-ebe5-4cfd-90a6-5b8e50b3bb6f}</UniqueIdentifier>
     </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\Game\psystem_config">
-      <Filter>Particle System</Filter>
-    </None>
   </ItemGroup>
 </Project>
